<resources>
    <string name="app_name">SecQR Scan</string>
    <string name="scanned_url_is_safe">Scanned URL is SAFE!</string>
    <string name="test">Test</string>
    <string name="cancel">Cancel</string>
    <string name="open_url">Open URL</string>
    <string name="open_not_recommended">OPEN (NOT RECOMMENDED)</string>
    <string name="get_me_out_of_here">GET ME OUT OF HERE!</string>
    <string name="scanned_url_is_malicious">SCANNED URL IS MALICIOUS!!!</string>
    <string name="learn_more_info">LEARN MORE INFO</string>
    <string name="scan_qr_code">SCAN QR CODE</string>
    <string name="get_me_out">Get Me Out!</string>
    <string name="go_to_the_website_anyways_not_recommended">Go to the website anyways (Not Recommended)</string>
    <string name="warning_suspected_phishing_website">WARNING: Suspected Phishing Website!</string>
    <string name="warning_message_description">Warning Message Description</string>
    <string name="secqr_scan_logo">SecQr SCan Logo</string>
    <string name="warning_icon">Warning Icon</string>
    <string name="learn_more_button">Learn More Button</string>
    <string name="phishing_body_string">Phishing is a form of an identity theft scam. This type of attack is done when the attacker creates a website to impersonate a legitimate website, in order to trick people into revealing their passwords, account information, or credit card numbers. Details from the legitimate website are copied over very carefully to make the site look identical to the legitimate one. Attackers use deceptive tactics to attempt to hide the fact that the website isn’t real. These include techniques like misspelling the webpage address (URL) or adding subtle characters to confuse you into thinking it’s real. Another technique involves taking advantage of the limited screen space on your computing devices. Attackers can use long web addresses which partially contain the real address inside of it, which can appear real as it can be partially hidden in address bar to save space. Further inspection is needed to see the full web address.</string>
    <string name="malware_body_string">Malware attack sites are malicious websites that are designed by attackers to try to infect your device with malware when you visit the web page. This can be done automatically, without your knowledge. This threat is particularly dangerous as it is impossible to see this malicious code executing. The website can look completely legitimate and safe, but have malicious code running invisibly in the background. Malware is software that is installed on your device which exploits vulnerabilities in your system to gain access to your files and control of your device. Malware can potentially steal your sensitive information like passwords and credit card number, hijack your device without your knowledge, strain your network and system resources, and even execute code or commands which can damage your device and data.</string>
    <string name="tips_string1">• To avoid phishing and malware attacks, it is extremely important to pay attention to warning messages when visiting unknown websites and to choose the recommended action.</string>
    <string name="go_back_home_string">Go Back Home</string>
    <string name="phishing_attacks_heading_string">Phishing Attacks:</string>
    <string name="phishing_prevention_comic_strip_string">Phishing prevention comic strip.</string>
    <string name="malware_prevention_comic_strip">Malware prevention comic strip_string</string>
    <string name="malware_attacks_heading_string">Malware Attacks:</string>
    <string name="tips_and_tricks_heading_string">Tips and Tricks:</string>
    <string name="stickers_img1_string">Watch out for QR code stickers.</string>
    <string name="stickers_img2_string">Stickers can be placed by attackers.</string>
    <string name="tips_subheading_string">Tips To Avoid Phishing and Malware Attacks:</string>
    <string name="tips_string2">• URL validation checks through Google Safe Browsing and PhishTank do have limitations. Some sites flagged as safe may in fact pose a risk, especially new attack sites. On the other hand, others that can be flagged as risky, may actually be safe. Always be skeptical of any links that you scan or click, even if they are marked safe. To better protect yourself, you should always carefully inspect any URL that you intend to open before visiting the website.</string>
    <string name="tips_string3">• Before you scan a QR code, inspect the physical barcode itself and look for any signs of tampering or if it is a sticker placed over the medium.</string>
    <string name="tips_string4">• Carefully check for misspellings and always look at the full web address for cues that indicate that the URL may be illegitimate.</string>
    <string name="tips_string5">• If in doubt, you can type the URL into your web browser manually. This eliminate any sort of clever tricks which may use characters that look like other characters. (e.g. An uppercase ‘i\' looks like a lower case ‘L’. i.e. ”I and l”)</string>
    <string name="tips_string6">• You can always use a trusted search engine, like Google Search, to search for the company’s webpage that you want to visit. This helps to ensure that you are going to the authentic website as the authentic website should be the first organic search result.</string>
    <string name="tips_string7">• It is recommended that you additionally install a good anti-virus software on your device to monitor for potential malware and to block and remove any malware could get installed into your system.</string>
    <string name="mispelled_comic_string">Be careful about mispelled urls.</string>
    <string name="links_heading_string">Links to More Resources:</string>
    <string name="prevent_phishing_info_link_string">To find out more about Phishing and what you can do to prevent being a victim to these attacks, visit:</string>
    <string name="prevent_malware_info_link_string">To find out more about malware attack sites and what you can do to better combat these attacks, visit:</string>
    <string name="report_phishing_link_string">To report a suspected phishing site, visit either:</string>
    <string name="report_malware_link_string">To report a suspected malware site, visit:</string>
    <string name="pw_comic_string">Never give away your password. No Company will ask for this.</string>
</resources>
