<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/alert_dark_frame"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textTitleGood"
        android:text="@string/scanned_url_is_safe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".1"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
        android:textAlignment="center"
        android:textColor="#FF4B00" />

    <TextView
        android:id="@+id/textURLDisplayGood"
        android:text="@string/test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".7"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textAlignment="center"
        android:textColor="#FF63C6F7"
        android:textSize="19sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:gravity="fill_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/buttonCancelGood"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/button_round"
            android:textColor="#FF4B00"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonOpenURLGood"
            android:text="@string/open_url"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/button_round"
            android:textColor="#FF4B00"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>
