<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="edu.tamuc.secqrscanner.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp"
    tools:ignore="GradleDependency">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"

        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:scaleType="fitCenter"
        android:src="@drawable/secqr_logo"


        app:layout_constraintVertical_bias="0.5"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:contentDescription="@string/secqr_scan_logo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/imageViewLogo"
        app:layout_constraintRight_toRightOf="@+id/imageViewLogo"
        app:layout_constraintHorizontal_bias="0.5">

        <Button
            android:id="@+id/ed_main_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            android:minHeight="35dp"
            android:minWidth="150dip"
            android:text="@string/learn_more_info"
            android:textAlignment="center"
            android:textColor="#FF4B00"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/imageViewLogo" />

        <Space
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/scan_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            android:minHeight="35dp"
            android:minWidth="150dip"
            android:text="@string/scan_qr_code"
            android:textAlignment="center"
            android:textColor="#FF4B00"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/ed_button"
            app:layout_constraintRight_toRightOf="@+id/imageViewLogo" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>